--- a/src/Eventuous.Connector.EsdbElastic/config-project.yaml
+++ b/src/Eventuous.Connector.EsdbElastic/config-project.yaml
@@ -17,6 +17,6 @@ target:
   connectorMode: "project"
   dataStream:
     indexName: "test"
-grpc:
+filter:
   uri: "http://localhost:9091"
   credentials: "insecure"
