--- a/src/Eventuous.Connector.EsdbSqlServer/Eventuous.Connector.EsdbSqlServer.csproj
+++ b/src/Eventuous.Connector.EsdbSqlServer/Eventuous.Connector.EsdbSqlServer.csproj
@@ -6,7 +6,6 @@
         <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
         <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)" />
         <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)" />
-        <PackageReference Include="EventStore.Client.Grpc" Version="22.0.0" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
         <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="$(OtelExtensionsVersion)" />
         <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="$(OtelExtensionsVersion)" />
@@ -14,8 +13,15 @@
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
+        <ProjectReference Include="..\Eventuous.Connector.EsdbBase\Eventuous.Connector.EsdbBase.csproj" />
+        <ProjectReference Include="..\Eventuous.Connector.Filters.Grpc\Eventuous.Connector.Filters.Grpc.csproj" />
     </ItemGroup>
     <ItemGroup>
         <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; ..\..\src" />
+    </ItemGroup>
+    <ItemGroup>
+        <Compile Include="..\Eventuous.Connector.Base\Tools\Ensure.cs">
+            <Link>Tools\Ensure.cs</Link>
+        </Compile>
     </ItemGroup>
 </Project>
