--- a/.editorconfig
+++ b/.editorconfig
@@ -17,13 +17,13 @@ resharper_csharp_align_multiline_binary_expressions_chain = true
 resharper_csharp_blank_lines_around_single_line_field = 0
 resharper_csharp_blank_lines_around_single_line_invocable = 1
 resharper_csharp_int_align_comments = true
-resharper_csharp_max_line_length = 120
+resharper_csharp_max_line_length = 180
 resharper_csharp_other_braces = end_of_line
 resharper_csharp_wrap_arguments_style = chop_if_long
 resharper_csharp_wrap_before_binary_opsign = true
 resharper_csharp_wrap_parameters_style = chop_if_long
 resharper_csharp_wrap_ternary_expr_style = wrap_if_long
-resharper_int_align_assignments = true
+resharper_int_align_assignments = false
 resharper_int_align_fields = true
 resharper_int_align_parameters = true
 resharper_int_align_properties = true
@@ -36,3 +36,5 @@ resharper_place_simple_embedded_statement_on_same_line = true
 resharper_space_within_single_line_array_initializer_braces = true
 resharper_wrap_object_and_collection_initializer_style = chop_if_long
 resharper_wrap_parameters_style = wrap_if_long
+
+file_header_template = Copyright (C) 2021-2022 Ubiquitous AS. All rights reserved\nLicensed under the Apache License, Version 2.0.
