--- a/src/Eventuous.Connector.EsdbElastic/Eventuous.Connector.EsdbElastic.csproj
+++ b/src/Eventuous.Connector.EsdbElastic/Eventuous.Connector.EsdbElastic.csproj
@@ -3,18 +3,24 @@
         <IsPackable>true</IsPackable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.ElasticSearch" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)" />
-        <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient" Version="1.0.0-beta2" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="$(OtelExtensionsVersion)" />
-        <PackageReference Include="Grpc.Tools" Version="2.48.1" PrivateAssets="All" />
+        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)"/>
+        <PackageReference Include="Eventuous.ElasticSearch" Version="$(EventuousVersion)"/>
+        <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)"/>
+        <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)"/>
+        <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient" Version="1.0.0-beta2"/>
+        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="$(OtelExtensionsVersion)"/>
+        <PackageReference Include="Grpc.Tools" Version="2.48.1" PrivateAssets="All"/>
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj" />
+        <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj"/>
+        <ProjectReference Include="..\Eventuous.Connector.Filters.Grpc\Eventuous.Connector.Filters.Grpc.csproj"/>
     </ItemGroup>
     <ItemGroup>
-        <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; .." />
+        <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; .."/>
+    </ItemGroup>
+    <ItemGroup>
+        <Compile Include="..\Eventuous.Connector.Base\Tools\Ensure.cs">
+            <Link>Tools\Ensure.cs</Link>
+        </Compile>
     </ItemGroup>
 </Project>
