--- a/samples/GrpcProjector/GrpcProjector.csproj
+++ b/samples/GrpcProjector/GrpcProjector.csproj
@@ -17,6 +17,9 @@
     <ItemGroup>
         <PackageReference Include="MinVer" Version="4.3.0" PrivateAssets="All"/>
         <PackageReference Include="Microsoft.NET.Build.Containers" Version="7.0.302"/>
+        <PackageReference Include="Serilog" Version="2.12.0"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="7.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0"/>
     </ItemGroup>
     <ItemGroup>
         <Protobuf Include="Protos\server.proto" GrpcServices="Server"/>
