--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,40 +19,19 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
       -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
+        name: Docker
+        uses: actions/setup-dotnet@v1
         with:
-          images: |
-            eventuous/connector
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+          dotnet-version: '8.0.x'
       -
         name: Login to DockerHub
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+      - name: Create and push Docker container
+        run: |
+          dotnet publish --runtime linux-x64 -p:PublishProfile=DefaultContainer -c Release --self-contained
+          dotnet publish --runtime linux-arm64 -p:PublishProfile=DefaultContainer -c Release --self-contained
