--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '8.0.x'
+          dotnet-quality: 'preview'
       -
         name: Login to DockerHub
         uses: docker/login-action@v1
