Change the registry

--- a/src/Eventuous.Connector/Eventuous.Connector.csproj
+++ b/src/Eventuous.Connector/Eventuous.Connector.csproj
@@ -8,7 +8,7 @@
             <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
             <ContainerImageName>eventuous/connector</ContainerImageName>
             <ContainerImageTags>$(RuntimeIdentifier)-$(MinVerVersion);$(RuntimeIdentifier)-latest</ContainerImageTags>
-            <ContainerRegistry>registry.hub.docker.com</ContainerRegistry>
+            <ContainerRegistry>registry-1.docker.io</ContainerRegistry>
         </PropertyGroup>
     </Target>
 
