--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          registry: registry.hub.docker.com
+          registry: registry-1.docker.io
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Create and push Docker container
