--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ on:
       - 'main'
 
 jobs:
-  docker:
+  docker-x64:
     runs-on: ubuntu-latest
     steps:
       -
@@ -32,10 +32,54 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Create and push Docker container
         run: |
-          dotnet tool install --global minver-cli
           cd src/Eventuous.Connector
           dotnet publish --runtime linux-x64 -p:PublishProfile=DefaultContainer -c Release --self-contained
+  docker-arm64:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v1
+      -
+        name: Docker
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0.100-preview.4.23260.5'
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: registry-1.docker.io
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Create and push Docker container
+        run: |
+          cd src/Eventuous.Connector
           dotnet publish --runtime linux-arm64 -p:PublishProfile=DefaultContainer -c Release --self-contained
+  docker-combined:
+    runs-on: ubuntu-latest
+    needs:
+      - docker-x64
+      - docker-arm64
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v1
+      -
+        name: Docker
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0.100-preview.4.23260.5'
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: registry-1.docker.io
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Create and push Docker container
+        run: |
+          dotnet tool install --global minver-cli
           export VERSION=$(minver)
           docker manifest create eventuous/connector:${VERSION} eventuous/connector:linux-x64-${VERSION} eventuous/connector:linux-arm64-${VERSION}
           docker manifest push eventuous/connector:${VERSION}
