--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,57 +2,74 @@ name: "Build and push Docker"
 
 on:
   push:
-    branches:
-      - '**'
     tags:
       - '*.*.*'
     paths-ignore:
       - '**.md'
       - '**.yaml'
-  pull_request:
-    branches:
-      - 'main'
 
 jobs:
-  docker:
+  docker-x64:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
+        name: Set up .NET
+        uses: actions/setup-dotnet@v3
         with:
-          images: |
-            eventuous/connector
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+          dotnet-version: '8.0.100-preview.4.23260.5'
       -
         name: Login to DockerHub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
+          registry: registry-1.docker.io
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Create and push Docker container
+        run: |
+          cd src/Eventuous.Connector
+          dotnet publish --runtime linux-x64 -p:PublishProfile=DefaultContainer -c Release --self-contained
+  docker-arm64:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.100-preview.4.23260.5'
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: registry-1.docker.io
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Create and push Docker container
+        run: |
+          cd src/Eventuous.Connector
+          dotnet publish --runtime linux-arm64 -p:PublishProfile=DefaultContainer -c Release --self-contained
+  docker-combined:
+    runs-on: ubuntu-latest
+    needs:
+      - docker-x64
+      - docker-arm64
+    steps:
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: registry-1.docker.io
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
       -
-        name: Build and push
-        uses: docker/build-push-action@v2
+        name: Create and push manifest images
+        uses: Noelware/docker-manifest-action@master
         with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+          inputs: eventuous/connector:latest
+          images: eventuous/connector:linux-x64-latest,eventuous/connector:linux-arm64-latest
+          push: true
