--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,16 +1,18 @@
 <Project>
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
+        <LangVersion>preview</LangVersion>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <EventuousVersion>0.10.6</EventuousVersion>
-        <OtelVersion>1.3.1</OtelVersion>
+        <EventuousVersion>0.14.1-alpha.0.31</EventuousVersion>
+        <OtelVersion>1.5.0-rc.1</OtelVersion>
         <OtelExtensionsVersion>1.0.0-rc9.6</OtelExtensionsVersion>
         <RepoRoot>$([System.IO.Directory]::GetParent($(MSBuildThisFileDirectory)).Parent.FullName)</RepoRoot>
+        <NoWarn>CS8981</NoWarn>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(IsTestProject)' != 'true'">
-        <PackageReference Include="MinVer" Version="4.2.0" PrivateAssets="All"/>
+        <PackageReference Include="MinVer" Version="4.3.0" PrivateAssets="All"/>
         <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" PrivateAssets="All"/>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
         <None Include="$(RepoRoot)\e-logo.png" Pack="true" PackagePath="\"/>
@@ -28,7 +30,7 @@
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/eventuous/Eventuous.git</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <Description>Eventuous connector between EventStoreDB and Elasticsearch</Description>
+        <Description>Eventuous connector between EventStoreDB and other things</Description>
         <Authors>Alexey Zimarev</Authors>
         <Copyright>Ubiquitous AS</Copyright>
         <PackageProjectUrl>https://eventuous.dev</PackageProjectUrl>
