--- a/samples/GrpcProjector/GrpcProjector.csproj
+++ b/samples/GrpcProjector/GrpcProjector.csproj
@@ -13,16 +13,14 @@
         </PropertyGroup>
     </Target>
     <ItemGroup>
-        <PackageReference Include="MinVer" Version="4.3.0" PrivateAssets="All"/>
-        <PackageReference Include="Microsoft.NET.Build.Containers" Version="7.0.302"/>
+        <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger" Version="0.3.9" />
         <PackageReference Include="Serilog" Version="2.12.0"/>
         <PackageReference Include="Serilog.AspNetCore" Version="7.0.0"/>
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding" Version="7.0.9" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.49.0"/>
     </ItemGroup>
     <ItemGroup>
         <Protobuf Include="Protos\server.proto" GrpcServices="Server"/>
-    </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="Grpc.AspNetCore" Version="2.49.0"/>
     </ItemGroup>
 </Project>
