--- a/samples/GrpcProjector/GrpcProjector.csproj
+++ b/samples/GrpcProjector/GrpcProjector.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -13,12 +13,12 @@
         </PropertyGroup>
     </Target>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger" Version="0.3.9" />
-        <PackageReference Include="Serilog" Version="2.12.0"/>
-        <PackageReference Include="Serilog.AspNetCore" Version="7.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding" Version="7.0.9" />
-        <PackageReference Include="Grpc.AspNetCore" Version="2.49.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger"/>
+        <PackageReference Include="Serilog"/>
+        <PackageReference Include="Serilog.AspNetCore"/>
+        <PackageReference Include="Serilog.Sinks.Console"/>
+        <PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding"/>
+        <PackageReference Include="Grpc.AspNetCore"/>
     </ItemGroup>
     <ItemGroup>
         <Protobuf Include="Protos\server.proto" GrpcServices="Server"/>
