--- a/src/Eventuous.Connector.Base/Eventuous.Connector.Base.csproj
+++ b/src/Eventuous.Connector.Base/Eventuous.Connector.Base.csproj
@@ -3,18 +3,18 @@
         <IsPackable>true</IsPackable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Eventuous.AspNetCore" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.Gateway" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)" />
-        <PackageReference Include="Serilog" Version="2.12.0" />
-        <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-        <PackageReference Include="NetEscapades.Configuration.Yaml" Version="2.2.0" />
-        <PackageReference Include="Grpc.AspNetCore" Version="2.48.0" />
-        <PackageReference Include="Grpc.Tools" Version="2.48.1" PrivateAssets="All" />
+        <PackageReference Include="Eventuous.Extensions.DependencyInjection"/>
+        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry"/>
+        <PackageReference Include="Eventuous.Gateway"/>
+        <PackageReference Include="Eventuous.Subscriptions.Polly"/>
+        <PackageReference Include="Serilog"/>
+        <PackageReference Include="Serilog.AspNetCore"/>
+        <PackageReference Include="Serilog.Sinks.Console"/>
+        <PackageReference Include="NetEscapades.Configuration.Yaml"/>
+        <PackageReference Include="Grpc.AspNetCore"/>
+        <PackageReference Include="Grpc.Tools" PrivateAssets="All"/>
     </ItemGroup>
     <ItemGroup>
-        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
     </ItemGroup>
 </Project>
