--- a/src/Eventuous.Connector.EsdbElastic/Eventuous.Connector.EsdbElastic.csproj
+++ b/src/Eventuous.Connector.EsdbElastic/Eventuous.Connector.EsdbElastic.csproj
@@ -3,13 +3,13 @@
         <IsPackable>true</IsPackable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)"/>
-        <PackageReference Include="Eventuous.ElasticSearch" Version="$(EventuousVersion)"/>
-        <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)"/>
-        <PackageReference Include="Eventuous.Subscriptions.Polly" Version="$(EventuousVersion)"/>
-        <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient" Version="1.0.0-beta2"/>
-        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="$(OtelExtensionsVersion)"/>
-        <PackageReference Include="Grpc.Tools" Version="2.48.1" PrivateAssets="All"/>
+        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" />
+        <PackageReference Include="Eventuous.ElasticSearch" />
+        <PackageReference Include="Eventuous.EventStore" />
+        <PackageReference Include="Eventuous.Subscriptions.Polly" />
+        <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.ElasticsearchClient" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" />
+        <PackageReference Include="Grpc.Tools" PrivateAssets="All"/>
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Eventuous.Connector.Base\Eventuous.Connector.Base.csproj"/>
