--- a/src/Eventuous.Connector.EsdbMongo/Eventuous.Connector.EsdbMongo.csproj
+++ b/src/Eventuous.Connector.EsdbMongo/Eventuous.Connector.EsdbMongo.csproj
@@ -3,12 +3,12 @@
         <IsPackable>true</IsPackable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.EventStore" Version="$(EventuousVersion)" />
-        <PackageReference Include="Eventuous.Projections.MongoDB" Version="$(EventuousVersion)" />
-        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="$(OtelExtensionsVersion)" />
-        <PackageReference Include="MongoDB.Driver.Core.Extensions.OpenTelemetry" Version="1.0.0" />
-        <PackageReference Include="Grpc.Tools" Version="2.48.1" PrivateAssets="All" />
+        <PackageReference Include="Eventuous.Diagnostics.OpenTelemetry" />
+        <PackageReference Include="Eventuous.EventStore" />
+        <PackageReference Include="Eventuous.Projections.MongoDB" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" />
+        <PackageReference Include="MongoDB.Driver.Core.Extensions.OpenTelemetry" />
+        <PackageReference Include="Grpc.Tools" PrivateAssets="All" />
     </ItemGroup>
     <ItemGroup>
         <Protobuf Include="Grpc\Protos\client.proto" GrpcServices="Client" AdditionalImportDirs=".; .." />
